examples/bad/ERROR_NOT_A_RECORD/if_is_not_a_record.st
language core;
extend with #records;

fn main(n : Bool) -> Nat {
  return (if (n) then 0 else succ(0)).field
}
//ERROR_NOT_A_RECORD
